test(BoardRow): detect layout issue and apply props to maintain fixed row height during rendering

--- a/src/components/XOGame/SinglePlayerUI/XOBoard/BoardRow/BoardRow.module.scss
+++ b/src/components/XOGame/SinglePlayerUI/XOBoard/BoardRow/BoardRow.module.scss
@@ -2,4 +2,8 @@
   display: flex;
   align-items: center;
   background-color: white;
+  height: fit-content !important;
+  max-height: fit-content !important;
+  overflow: hidden !important;
+  padding: 0 !important;
 }
